--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -17,7 +17,7 @@
             <p class="col-lg-12 fs-4 blog-body">
                 @Html.Raw(Model.Blog.Body)
             </p>
-            <p class="user"> @Model.Owner.Nick </p>
+            <p class="user"> @Model.Owner.Nick (@(DateTime.Today.Year - Model.Owner.BirthDate.Year) years)</p>
             @if (ViewBag.Tags != null && ((IEnumerable<Tag>)ViewBag.Tags).Count() > 0)
             {
                 if (Model.Blog.UserId == userId.Value)
@@ -96,10 +96,6 @@
                 });
             }
         });
-
-        function Back() {
-            window.history.back();
-        }
 
     </script>
 }
