--- a/BlogApp/Views/Profile/Index.cshtml
+++ b/BlogApp/Views/Profile/Index.cshtml
@@ -54,7 +54,7 @@
     <div class="col-md-9 col-lg-6 col-xl-6 my-lg-5">
         <img src="images/undraw_wall-post_e47r.svg" class="img-fluid" alt="Login image">
     </div>
-</div#if>
+</div>
 
 @section Scripts {
     <script>
@@ -64,9 +64,6 @@
                 } else {
                     console.log("Akcia bola zrušená.");
                 }
-            }
-            function Back() {
-                window.history.back();
             }
     </script>
 }
