--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -3,10 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/BlogApp.styles.css" asp-append-version="true" />
-     *@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/styles.css">
@@ -34,10 +30,13 @@
                     <img src="@Context.Session.GetString("userPhoto")" alt="user photo" width="32" height="32" class="rounded-circle not-distorted">
                 </a>
                 <ul class="dropdown-menu text-small" style="">
-                    <li><a class="dropdown-item" asp-action="Add" asp-controller="Blog"><i class="bi bi-plus-square"></i> Add blog</a></li>
-                    <li><a class="dropdown-item" asp-action="Index" asp-controller="Profile"><i class="bi bi-gear"></i> Profile</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a asp-controller="Authentication" asp-action="Logout" class="dropdown-item"><i class="bi bi-door-closed"></i> Sign out</a></li>
+                    @if (Context.Session.GetInt32("userId")>0)
+                    {
+                        <li><a class="dropdown-item" asp-action="Add" asp-controller="Blog"><i class="bi bi-plus-square"></i> Add blog</a></li>
+                        <li><a class="dropdown-item" asp-action="Index" asp-controller="Profile"><i class="bi bi-gear"></i> Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                    }
+                    <li><a asp-action="Logout" asp-controller="Authentication" class='dropdown-item'><i class='bi bi-door-closed'></i>@((Context.Session.GetInt32("userId")>0)?"Sign out":"Create profile")</a></li>
                 </ul>
             </div>
         </div>
@@ -60,5 +59,6 @@
         </footer>
     </div>
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="/js/script.js"></script>
 </body>
 </html>
