--- a/BlogApp/Views/Authentication/Register.cshtml
+++ b/BlogApp/Views/Authentication/Register.cshtml
@@ -5,14 +5,14 @@
     if (TempData["takenLogin"] != null)
     {
         <script>
-            alert("Takýto login je už zabratý!");
+            alert("This login is already taken!");
         </script>
         TempData.Remove("takenLogin");
     }
     if (TempData["notFilled"] != null)
     {
         <script>
-            alert("Všetky polia musia byť vyplnené!");
+            alert("Every field must be filled!");
         </script>
         TempData.Remove("notFilled");
     }
@@ -21,59 +21,35 @@
 <div class="row d-flex justify-content-center align-items-center w-100 px-5 border">
     <div class="col-md-8 col-lg-6 col-xl-5 offset-xl-1  py-lg-5">
         <h1 class="mb-5">Registration</h1>
-        <form method="post" asp-controller="Authentication" asp-action="Register">
+        <form method="post" asp-controller="Authentication" asp-action="Register" id="registerForm">
             <!-- Name input -->
-            <div data-mdb-input-init="" class="form-outline mb-4" data-mdb-input-initialized="true">
-                <input type="text" class="form-control form-control-lg" name="name" placeholder="Name" value="@Model?.Name">
-                <div class="form-notch">
-                    <div class="form-notch-leading" style="width: 9px;"></div>
-                    <div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div>
-                </div>
+            <div class="form-outline mb-4">
+                <input type="text" id="nameInput" class="form-control form-control-lg" name="name" placeholder="Name" value="@Model?.Name" required>
             </div>
 
             <!-- Surname input -->
             <div data-mdb-input-init="" class="form-outline mb-4" data-mdb-input-initialized="true">
-                <input type="text" class="form-control form-control-lg" name="surname" placeholder="Surname" value="@Model?.Surname">
-                <div class="form-notch">
-                    <div class="form-notch-leading" style="width: 9px;"></div>
-                    <div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div>
-                </div>
+                <input type="text" id="surnameInput" class="form-control form-control-lg" name="surname" placeholder="Surname" value="@Model?.Surname" required>
             </div>
 
             <!-- Nick input -->
             <div data-mdb-input-init="" class="form-outline mb-4" data-mdb-input-initialized="true">
-                <input type="text" class="form-control form-control-lg" name="nick" placeholder="Nick" value="@Model?.Nick">
-                <div class="form-notch">
-                    <div class="form-notch-leading" style="width: 9px;"></div>
-                    <div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div>
-                </div>
+                <input type="text" id="nickInput" class="form-control form-control-lg" name="nick" placeholder="Nick" value="@Model?.Nick" required>
             </div>
 
             <!-- BirthDate input -->
             <div data-mdb-input-init="" class="form-outline mb-4" data-mdb-input-initialized="true">
-                <input type="date" class="form-control form-control-lg" name="date" placeholder="Date of birth" required>
-                <div class="form-notch">
-                    <div class="form-notch-leading" style="width: 9px;"></div>
-                    <div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div>
-                </div>
+                <input type="date" id="dateInput" class="form-control form-control-lg" name="date" placeholder="Date of birth" required>
             </div>
 
             <!-- Login input -->
             <div data-mdb-input-init="" class="form-outline mb-4" data-mdb-input-initialized="true">
-                <input type="text" class="form-control form-control-lg" name="login" placeholder="Login">
-                <div class="form-notch">
-                    <div class="form-notch-leading" style="width: 9px;"></div>
-                    <div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div>
-                </div>
+                <input type="text" id="loginInput" class="form-control form-control-lg" name="login" placeholder="Login" required>
             </div>
 
             <!-- Password input -->
             <div data-mdb-input-init="" class="form-outline mb-3" data-mdb-input-initialized="true">
-                <input type="password" class="form-control form-control-lg" name="password" placeholder="Password" value="@Model?.Password">
-                <div class="form-notch">
-                    <div class="form-notch-leading" style="width: 9px;"></div>
-                    <div class="form-notch-middle" style="width: 64px;"></div><div class="form-notch-trailing"></div>
-                </div>
+                <input type="password" id="passwordInput" class="form-control form-control-lg" name="password" placeholder="Password" value="@Model?.Password" required>
             </div>
 
             <div class="text-center text-lg-start mt-4 pt-2">
@@ -87,3 +63,24 @@
         <img src="/images/undraw_duplicate_4ikn.svg" class="img-fluid" alt="Register image">
     </div>
 </div>
+
+<script>
+    document.getElementById("registerForm").onsubmit = function () {
+        let name = document.getElementById("nameInput").value;
+        let surname = document.getElementById("surnameInput").value;
+        let nick = document.getElementById("nickInput").value;
+        let date = document.getElementById("dateInput").value;
+        let login = document.getElementById("loginInput").value;
+        let password = document.getElementById("passwordInput").value;
+
+        if (name === "" || surname === "" || date === "" || login === "" || password === "" || nick === "") {
+            alert("Please fill in all fields.");
+            event.preventDefault();
+        }
+
+        if (password.length < 8) {
+            alert("Password must have at least 8 characters.");
+            event.preventDefault();
+        }
+    }
+</script>
