--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -36,11 +36,11 @@
             }
         </div>
     </div>
-    <a onclick="Back()" class="btn btn-secondary rounded-pill px-3" role="button">Back</a>
+    <a onclick="Back()" class="btn btn-secondary px-3 blog-backbutton" role="button">Back</a>
     @if (userId == Model.Blog.UserId)
     {
-        <a asp-action="Delete" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button" onclick="return confirm('Naozaj chcete vymazať tento blog?');">Delete</a>
-        <a asp-action="Edit" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button">Edit</a>
+        <a asp-action="Delete" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-danger px-3 mx-2 float-end" role="button" onclick="return confirm('Naozaj chcete vymazať tento blog?');">Delete</a>
+        <a asp-action="Edit" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-primary px-3 mx-2 float-end" role="button">Edit</a>
     }
 </div>
 
