--- a/BlogApp/wwwroot/css/styles.css
+++ b/BlogApp/wwwroot/css/styles.css
@@ -7,14 +7,13 @@ body {
 }
 
 .login-gray-background {
-    background-color: #d3d3d3; /* svetlá šedá */
-    /*min-height: 100vh;*/ /* aby pokrylo celú výšku stránky */
+    background-color: #e8e9eb;
 }
 
 .container-header {
     position: sticky;
     top: 0;
-    background-color: #EEEEEEFF;
+    background-color: #e8e9eb;
     width: 100%;
     padding: 0.5em 5em;
     z-index: 1;
@@ -72,6 +71,23 @@ p.home-blog-tags::before {
     padding: 3em 3em;
     background-color: #00000003;
 }
+.comment{
+    border: 1px solid #00000010;
+    margin: 1em 0em;
+    padding: 1em;
+    font-size: 1.2em;
+    background-color: #0000000A;
+}
+.comment-owner {
+    display: inline-block;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+.navbar-nick {
+    display: inline;
+    font-size: 1.5em;
+    margin: 0em 0.5em;
+}
 .tags .editable-tag:hover {
     cursor: pointer;
 }
@@ -103,15 +119,30 @@ p.home-blog-tags::before {
 .profile-container {
     text-align: center;
 }
+
+.profile-container-bottom {
+    /*margin-top: 2em;
+    text-align: left;*/
+}
+.blog-backbutton {
+    margin-bottom: 1em;
+}
+
 .profile-whoami-img {
     height: 100px;
-    width : 100px;
+    width: 100px;
     aspect-ratio: 1 / 1;
 }
 
 .comments-section-comments {
-    margin-top: 3em;
+    margin-top: 1em;
+    margin-bottom: 2em;
 }
+
+.comments-section-comments h4 {
+    margin-bottom: 1em;
+}
+
 .blog-comment-whoposted-img {
     height: 50px;
     width: 50px;
