Added styles to profile page

--- a/BlogApp/Views/Authentication/Register.cshtml
+++ b/BlogApp/Views/Authentication/Register.cshtml
@@ -65,7 +65,7 @@
 </div>
 
 <script>
-    document.getElementById("registerForm").onsubmit = function () {
+    document.getElementById("registerForm").onsubmit = function (event) {
         let name = document.getElementById("nameInput").value;
         let surname = document.getElementById("surnameInput").value;
         let nick = document.getElementById("nickInput").value;
