--- a/BlogApp/Views/Profile/Index.cshtml
+++ b/BlogApp/Views/Profile/Index.cshtml
@@ -54,16 +54,16 @@
         </div>
     </div>
 </div>
-    <div class="col-md-9 col-lg-6 col-xl-6 my-lg-5">
-        <img src="images/undraw_wall-post_e47r.svg" class="img-fluid" alt="Login image">
-    </div>
+<div class="col-md-9 col-lg-6 col-xl-6 my-lg-5 profile-image-right">
+    <img src="images/undraw_wall-post_e47r.svg" class="img-fluid" alt="Login image">
+</div>
 
 @section Scripts {
     <script>
-            function confirmAction(url) {
-                if (confirm("Do you really want to delete this profile?")) {
-                    window.location.href = url;
-                }
+        function confirmAction(url) {
+            if (confirm("Do you really want to delete this profile?")) {
+                window.location.href = url;
             }
+        }
     </script>
 }
