--- a/BlogApp/wwwroot/css/styles.css
+++ b/BlogApp/wwwroot/css/styles.css
@@ -1,7 +1,6 @@
 ﻿@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 body {
-    --index-blog-title-color: #3498db;
     font-size: 1em;
     overflow-y: scroll;
 }
@@ -38,13 +37,13 @@ body {
 }
 
 .index-blog-name {
-    color: var(--index-blog-title-color);
+    color: #3498db;
 }
 
 .blog-content p {
-    display: -webkit-box; /* Vytvorenie flexbox kontajnera */
-    -webkit-box-orient: vertical; /* Nastavenie orientácie na vertikálnu */
-    -webkit-line-clamp: 3; /* Obmedzenie na 3 riadky  -KÓD OD CHATGPT*/
+    display: -webkit-box; /*Vytvorenie flexbox kontajnera -KÓD OD CHATGPT */
+    -webkit-box-orient: vertical; /*Nastavenie orientácie na vertikálnu -KÓD OD CHATGPT */
+    -webkit-line-clamp: 3; /*Obmedzenie na 3 riadky  -KÓD OD CHATGPT */
     overflow: hidden;
     text-overflow: ellipsis;
 }
@@ -58,44 +57,52 @@ p.home-blog-date-posted::before {
     content: "Posted: ";
     color: #00000077;
 }
+
 p.home-blog-tags::before {
     content: "Tags: ";
     color: #00000077;
 }
+
 .blog-main-container .tags::before {
     content: "Tags: ";
     color: #00000077;
 }
+
 .comments-section {
     margin: 3em 3em;
     padding: 3em 3em;
     background-color: #00000003;
 }
+
 .comment{
     border: 1px solid #00000010;
     margin: 1em 0em;
     padding: 1em;
     font-size: 1.2em;
-    background-color: #0000000A;
+    backg
+    round-color: #0000000A;
 }
+
 .comment-owner {
     display: inline-block;
     font-weight: bold;
     font-size: 1.5em;
 }
+
 .navbar-nick {
     display: inline;
     font-size: 1.5em;
     margin: 0em 0.5em;
 }
+
 .tags .editable-tag:hover {
     cursor: pointer;
 }
+
 .tags .editable-tag {
     font-style: italic;
     font-weight: bold;
 }
-
 
 .blog-whoposted-img {
     width: 20rem;
@@ -120,10 +127,6 @@ p.home-blog-tags::before {
     text-align: center;
 }
 
-.profile-container-bottom {
-    /*margin-top: 2em;
-    text-align: left;*/
-}
 .blog-backbutton {
     margin-bottom: 1em;
 }
@@ -148,6 +151,7 @@ p.home-blog-tags::before {
     width: 50px;
     aspect-ratio: 1 / 1;
 }
+
 .not-distorted {
     object-fit: cover;
 }
@@ -155,12 +159,17 @@ p.home-blog-tags::before {
 .index-search-item {
     margin: 0.5em;
 }
+
 .mynavbar-ul {
     font-size: 1.5em;
 }
 
 @media (max-width: 768px) { /* Pre tablety */
     .blog-whoposted-img {
+        display: none;
+    }
+
+    .profile-image-right {
         display: none;
     }
 
