Refactoring (deleting useless code)

--- a/BlogApp/Views/Authentication/Index.cshtml
+++ b/BlogApp/Views/Authentication/Index.cshtml
@@ -7,8 +7,8 @@
     <div class="col-md-9 col-lg-6 col-xl-6 my-lg-5">
         <img src="images/undraw_fingerprint-login_19qv.svg" class="img-fluid" alt="Login image">
     </div>
-    <div class="col-md-8 col-lg-6 col-xl-5 offset-xl-1 py-lg-5">
-    <h1 class="mb-5">Blogs app</h1>
+    <div class="col-md-8 col-lg-6 col-xl-5 py-lg-5">
+        <h1 class="mb-5">Blogs app</h1>
         <form method="post" asp-controller="Authentication" asp-action="Login" id="loginForm">
             <!-- Login input -->
             <div  class="form-outline mb-4">
