--- a/BlogApp/Views/Authentication/Register.cshtml
+++ b/BlogApp/Views/Authentication/Register.cshtml
@@ -19,7 +19,7 @@
 }
 
 <div class="row d-flex justify-content-center align-items-center w-100 px-5 border">
-    <div class="col-md-8 col-lg-6 col-xl-5 offset-xl-1  py-lg-5">
+    <div class="col-md-8 col-lg-6 col-xl-5  py-lg-5">
         <h1 class="mb-5">Registration</h1>
         <form method="post" asp-controller="Authentication" asp-action="Register" id="registerForm">
             <!-- Name input -->
