--- a/BlogApp/Views/Blog/Add.cshtml
+++ b/BlogApp/Views/Blog/Add.cshtml
@@ -1,10 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
-@model BlogApp.Models.Blog
+﻿@model BlogApp.Models.Blog
 
 
 <!-- Form -->
@@ -12,15 +6,15 @@
     <h2 class="mb-4">Add new blog</h2>
     <form method="post" asp-action="Add">
         <div class="mb-3">
-            <label for="blogTitle" class="form-label">Title of the blog</label>
+            <label class="form-label">Title of the blog</label>
             <input type="text" class="form-control" id="blogTitle" asp-for="Title" required>
         </div>
         <div class="mb-3">
-            <label for="blogText" class="form-label">Body of the blog</label>
+            <label class="form-label">Body of the blog</label>
             <textarea class="form-control" id="blogText" rows="5" asp-for="Body" required></textarea>
         </div>
         <div class="mb-3">
-            <label for="blogTags" class="form-label">Tags</label>
+            <label class="form-label">Tags</label>
             <textarea class="form-control" id="blogTags" rows="1" name="tags"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Add this blog</button>
