--- a/BlogApp/Views/Home/Index.cshtml
+++ b/BlogApp/Views/Home/Index.cshtml
@@ -99,7 +99,7 @@
             </a>`);
                         });
                     },
-                    error: function (xhr, status, error) {
+                    error: function (xhr, status, error) { // kód od chatGPT
                         console.log("Chyba pri získavaní údajov:", error);
                     }
                 });
