--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -10,8 +10,8 @@
     <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-12 text-center text-lg-start">
             <div class="d-flex align-items-center mb-3">
-                <h1 class="display-4 fw-bold lh-1 text-body-emphasis col-lg-9 col-12"> @Model.Blog.Title </h1>
-                <img src="@Model.Owner.ImagePath" alt="user photo" @* width="64" height="64" *@ class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img not-distorted">
+                <h1 class="display-4 fw-bold lh-1 col-lg-9 col-12"> @Model.Blog.Title </h1>
+                <img src="@Model.Owner.ImagePath" alt="user photo" class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img not-distorted">
             </div>
 
             <p class="col-lg-12 fs-4 blog-body">
@@ -55,6 +55,7 @@
             let tagId = tagElement.data("tag-id");
             let tagContent = tagElement.text().trim();
 
+            // kód od ChatGPT
             // Zmenenie span na input
             tagElement.replaceWith(`
                 <input type="text" class="tag-editor" data-tag-id="${tagId}" value="${tagContent}" />
